// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormTimesheetInfo /> on ADD mode should match snapshot 1`] = `
.emotion-2 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 24px;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 16px;
}

.emotion-4 {
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.5;
  color: #212121;
}

.emotion-6 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: -16px;
  width: calc(100% + 16px);
  margin-left: -16px;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-6>.MuiGrid-item {
  padding-top: 16px;
}

.emotion-6>.MuiGrid-item {
  padding-left: 16px;
}

.emotion-7 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-8 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.4px;
  text-transform: capitalize;
  font-family: Roboto,sans-serif;
  line-height: 1.75;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #E0E0E0;
  border-radius: 4px;
  color: #212121;
  color: #F44336;
}

.emotion-8::-moz-focus-inner {
  border-style: none;
}

.emotion-8.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-8 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-8:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(224, 224, 224, 0.04);
}

@media (hover: none) {
  .emotion-8:hover {
    background-color: transparent;
  }
}

.emotion-8.Mui-disabled {
  color: #BDBDBD;
}

.emotion-8:hover {
  background-color: rgba(33, 33, 33, 0.04);
}

.emotion-9 {
  display: inherit;
  margin-right: 8px;
  margin-left: -4px;
}

.emotion-9>*:nth-of-type(1) {
  font-size: 20px;
}

.emotion-10 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

.emotion-12 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.4px;
  text-transform: capitalize;
  font-family: Roboto,sans-serif;
  line-height: 1.75;
  min-width: 64px;
  padding: 5px 15px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border: 1px solid rgba(33, 150, 243, 0.5);
  color: #2196F3;
  border-radius: 4px;
}

.emotion-12::-moz-focus-inner {
  border-style: none;
}

.emotion-12.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-12 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-12:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(33, 150, 243, 0.04);
  border: 1px solid #2196F3;
}

@media (hover: none) {
  .emotion-12:hover {
    background-color: transparent;
  }
}

.emotion-12.Mui-disabled {
  color: #BDBDBD;
  border: 1px solid #E0E0E0;
}

.emotion-15 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-16 {
  position: relative;
  box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2),0px 3px 4px rgba(0, 0, 0, 0.14),0px 1px 8px rgba(0, 0, 0, 0.12);
  border-radius: 4px;
  overflow: hidden;
}

.emotion-17 {
  width: 100%;
  overflow-x: auto;
}

.emotion-18 {
  display: table;
  width: 100%;
  border-collapse: collapse;
  border-spacing: 0;
}

.emotion-18 caption {
  font-size: 0.875rem;
  font-weight: 400;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.43;
  padding: 16px;
  color: #757575;
  text-align: left;
  caption-side: bottom;
}

.emotion-19 {
  display: table-header-group;
}

.emotion-20 {
  color: inherit;
  display: table-row;
  vertical-align: middle;
  outline: 0;
}

.emotion-20.MuiTableRow-hover:hover {
  background-color: #F5F5F5;
}

.emotion-20.Mui-selected {
  background-color: rgba(33, 150, 243, 0.08);
}

.emotion-20.Mui-selected:hover {
  background-color: rgba(33, 150, 243, 0.12);
}

.emotion-21 {
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.5rem;
  display: table-cell;
  vertical-align: inherit;
  border-bottom: 1px solid rgba(251, 251, 251, 1);
  text-align: left;
  padding: 16px;
  color: #212121;
  position: relative;
}

.emotion-22 {
  margin: 0;
  font-size: 0.875rem;
  font-weight: 400;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.43;
}

.emotion-23 {
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.5rem;
  display: table-cell;
  vertical-align: inherit;
  border-bottom: 1px solid rgba(251, 251, 251, 1);
  text-align: left;
  padding: 16px;
  color: #212121;
  position: relative;
  border-right: 1px solid #E0E0E0;
  border-bottom: 1px solid #E0E0E0;
}

.emotion-24 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-25 {
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-26 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  padding: 9px;
  border-radius: 50%;
  color: #757575;
}

.emotion-26::-moz-focus-inner {
  border-style: none;
}

.emotion-26.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-26 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-26:hover {
  background-color: rgba(33, 150, 243, 0.04);
}

@media (hover: none) {
  .emotion-26:hover {
    background-color: transparent;
  }
}

.emotion-26.Mui-checked,
.emotion-26.MuiCheckbox-indeterminate {
  color: #2196F3;
}

.emotion-26.Mui-disabled {
  color: #BDBDBD;
}

.emotion-26.MuiCheckbox-indeterminate {
  color: #757575;
}

.emotion-27 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  margin: 0;
  padding: 0;
  z-index: 1;
}

.emotion-29 {
  margin: 0;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.1px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.57;
}

.emotion-34 {
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.5rem;
  display: table-cell;
  vertical-align: inherit;
  border-bottom: 1px solid rgba(251, 251, 251, 1);
  text-align: left;
  padding: 16px;
  color: #212121;
  position: relative;
  border-right: none;
  border-bottom: 1px solid #E0E0E0;
}

.emotion-36 {
  display: table-row-group;
}

.emotion-38 {
  font-size: 0.875rem;
  font-weight: 400;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.43;
  display: table-cell;
  vertical-align: inherit;
  border-bottom: 1px solid rgba(251, 251, 251, 1);
  text-align: center;
  padding: 0;
  color: #212121;
}

.emotion-39 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  margin: auto;
  color: #757575;
  background-color: #FAFAFA;
  height: 80px;
  border: none;
}

.emotion-40 {
  position: absolute;
  width: 100%;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-42 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  height: 24px;
  margin-right: 5px;
  color: #00000061;
}

.emotion-44 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 16px;
  padding: 8px;
}

.emotion-45 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: #E0E0E0;
  border-bottom-width: thin;
  border-top: 1px dashed #E0E0E0;
  border-bottom: 0px solid;
  height: 0;
  background-color: transparent;
}

.emotion-47 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: -24px;
  width: calc(100% + 24px);
  margin-left: -24px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-47>.MuiGrid-item {
  padding-top: 24px;
}

.emotion-47>.MuiGrid-item {
  padding-left: 24px;
}

.emotion-49 {
  margin-bottom: 8px;
}

.emotion-51 {
  margin-top: 16px;
}

.emotion-52 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-53 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-width: 0;
  padding: 0;
  margin: 0;
  border: 0;
  vertical-align: top;
  width: 100%;
}

.emotion-54 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-width: 0;
  padding: 0;
  margin: 0;
  border: 0;
  vertical-align: top;
  width: 100%;
}

.emotion-54 .TextFieldBase-readOnly .MuiInputBase-root {
  background-color: #FAFAFA;
}

.emotion-55 {
  color: #757575;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.4375em;
  padding: 0;
  position: relative;
  display: block;
  transform-origin: top left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: calc(100% - 24px);
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transform: translate(14px, 9px) scale(1);
  -moz-transform: translate(14px, 9px) scale(1);
  -ms-transform: translate(14px, 9px) scale(1);
  transform: translate(14px, 9px) scale(1);
  -webkit-transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,-webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,max-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,max-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  z-index: 1;
  pointer-events: none;
}

.emotion-55.Mui-focused {
  color: #2196F3;
}

.emotion-55.Mui-disabled {
  color: #9E9E9E;
}

.emotion-55.Mui-error {
  color: #F44336;
}

.emotion-56 {
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.4375em;
  color: #212121;
  box-sizing: border-box;
  position: relative;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0 5px;
  padding-top: 1px;
  width: 100%;
  line-height: 1.1876em;
  position: relative;
  border-radius: 4px;
  padding: 8.5px 14px;
}

.emotion-56.Mui-disabled {
  color: #9E9E9E;
  cursor: default;
}

.emotion-56:hover .MuiOutlinedInput-notchedOutline {
  border-color: #212121;
}

@media (hover: none) {
  .emotion-56:hover .MuiOutlinedInput-notchedOutline {
    border-color: rgba(0, 0, 0, 0.23);
  }
}

.emotion-56.Mui-focused .MuiOutlinedInput-notchedOutline {
  border-color: #2196F3;
  border-width: 2px;
}

.emotion-56.Mui-error .MuiOutlinedInput-notchedOutline {
  border-color: #F44336;
}

.emotion-56.Mui-disabled .MuiOutlinedInput-notchedOutline {
  border-color: #BDBDBD;
}

.emotion-57 {
  font: inherit;
  letter-spacing: inherit;
  color: currentColor;
  padding: 0;
  border: 0;
  box-sizing: content-box;
  background: none;
  height: auto;
  margin: 0;
  -webkit-tap-highlight-color: transparent;
  display: block;
  min-width: 0;
  width: 100%;
  -webkit-animation-name: mui-auto-fill-cancel;
  animation-name: mui-auto-fill-cancel;
  -webkit-animation-duration: 10ms;
  animation-duration: 10ms;
  padding-top: 0;
  resize: none;
  padding: 0;
}

.emotion-57::-webkit-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-57::-moz-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-57:-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-57::-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-57:focus {
  outline: 0;
}

.emotion-57:invalid {
  box-shadow: none;
}

.emotion-57::-webkit-search-decoration {
  -webkit-appearance: none;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-57::-webkit-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-57::-moz-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-57:-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-57::-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-57:focus::-webkit-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-57:focus::-moz-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-57:focus:-ms-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-57:focus::-ms-input-placeholder {
  opacity: 0.42;
}

.emotion-57.Mui-disabled {
  opacity: 1;
  -webkit-text-fill-color: #9E9E9E;
}

.emotion-57:-webkit-autofill {
  -webkit-animation-duration: 5000s;
  animation-duration: 5000s;
  -webkit-animation-name: mui-auto-fill;
  animation-name: mui-auto-fill;
}

.emotion-57:-webkit-autofill {
  border-radius: inherit;
}

.emotion-59 {
  text-align: left;
  position: absolute;
  bottom: 0;
  right: 0;
  top: -5px;
  left: 0;
  margin: 0;
  padding: 0 8px;
  pointer-events: none;
  border-radius: inherit;
  border-style: solid;
  border-width: 1px;
  overflow: hidden;
  min-width: 0%;
  border-color: rgba(0, 0, 0, 0.23);
}

.emotion-60 {
  float: unset;
  overflow: hidden;
  display: block;
  width: auto;
  padding: 0;
  height: 11px;
  font-size: 0.75em;
  visibility: hidden;
  max-width: 0.01px;
  -webkit-transition: max-width 50ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: max-width 50ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  white-space: nowrap;
}

.emotion-60>span {
  padding-left: 5px;
  padding-right: 5px;
  display: inline-block;
  opacity: 0;
  visibility: visible;
}

<div>
  <div
    class="MuiBox-root emotion-0"
    data-testid="FormTimesheetInfo__root"
  >
    <div
      class="MuiBox-root emotion-0"
      data-testid="FormTimesheetInfo__addGeneralInfoSection"
    >
       
      <div
        class="MuiBox-root emotion-2"
        data-testid="OtherWorkingHoursFormSection__root"
      >
        <div
          class="MuiGrid-root MuiGrid-container emotion-3"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-4"
            data-testid="OtherWorkingHoursFormSection__title"
          >
            Other Working Hours
          </p>
          <div
            class="MuiBox-root emotion-0"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 emotion-6"
            >
              <div
                class="MuiGrid-root MuiGrid-item emotion-7"
              >
                <button
                  aria-label="ra.common.action.delete"
                  class="MuiButton-root MuiButton-text MuiButton-textDefault MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled  emotion-8"
                  data-testid="OtherWorkingHoursFormSection__deleteAction"
                  disabled=""
                  style="word-break: keep-all;"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeMedium emotion-9"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-10"
                      data-testid="DeleteOutlinedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 9v10H8V9h8m-1.5-6h-5l-1 1H5v2h14V4h-3.5l-1-1zM18 7H6v12c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7z"
                      />
                    </svg>
                  </span>
                  ra.common.action.delete
                </button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item emotion-7"
              >
                <button
                  aria-label="ra.common.action.create"
                  class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root  emotion-12"
                  data-testid="OtherWorkingHoursFormSection__addButton"
                  style="word-break: keep-all;"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeMedium emotion-9"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-10"
                      data-testid="AddIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                  Add
                  <span
                    class="MuiTouchRipple-root emotion-15"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-16"
        >
          <div
            class="MuiTableContainer-root emotion-17"
          >
            <table
              class="MuiTable-root emotion-18"
              data-testid="OtherWorkingHoursUpsertTable"
            >
              <thead
                class="MuiTableHead-root emotion-19"
                data-testid="TableBase__header"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head emotion-20"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-21"
                    scope="col"
                    style="min-width: 5%; border-right: 1px solid #E0E0E0; border-bottom: 1px solid #E0E0E0; width: 5%;"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 emotion-22"
                      data-testid="TableIndexCell__index"
                    />
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-23"
                    scope="col"
                    style="width: 20%;"
                  >
                    <div
                      class="MuiBox-root emotion-24"
                    >
                      <div
                        class="MuiBox-root emotion-25"
                      >
                        <span
                          aria-disabled="true"
                          class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root Mui-disabled MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root Mui-disabled emotion-26"
                          data-testid="TableHeaderWithCheckbox__checkboxHeader"
                          style="padding: 0px; width: 18px; height: 18px;"
                          tabindex="-1"
                        >
                          <input
                            aria-label="ra.common.action.selectAllItems"
                            class="PrivateSwitchBase-input emotion-27"
                            data-indeterminate="false"
                            disabled=""
                            type="checkbox"
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-10"
                            data-testid="CheckBoxOutlineBlankIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                      </div>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle2 emotion-29"
                        data-testid="TableHeaderWithCheckbox__cellHeader"
                      >
                        Working Type
                      </h6>
                    </div>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-23"
                    scope="col"
                    style="width: 30%;"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 emotion-29"
                      data-testid="TableHeaderWithCheckbox__cellHeader"
                    >
                      Time Range
                    </h6>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-23"
                    scope="col"
                    style="width: 10%;"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 emotion-29"
                      data-testid="TableHeaderWithCheckbox__cellHeader"
                    >
                      Total Hours
                    </h6>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-34"
                    scope="col"
                    style="width: 40%;"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 emotion-29"
                      data-testid="TableHeaderWithCheckbox__cellHeader"
                    >
                      Remarks
                    </h6>
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root emotion-36"
              >
                <tr
                  class="MuiTableRow-root emotion-20"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium emotion-38"
                    colspan="12"
                    data-testid="TableBase__noDataMessage"
                  >
                    <div
                      class="MuiBox-root emotion-39"
                    >
                      <div
                        class="MuiBox-root emotion-40"
                      >
                        <div
                          class="MuiBox-root emotion-24"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-42"
                            data-testid="NoData__icon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7 15h7v2H7zm0-4h10v2H7zm0-4h10v2H7zm12-4h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-.14 0-.27.01-.4.04-.39.08-.74.28-1.01.55-.18.18-.33.4-.43.64-.1.23-.16.49-.16.77v14c0 .27.06.54.16.78s.25.45.43.64c.27.27.62.47 1.01.55.13.02.26.03.4.03h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7-.25c.41 0 .75.34.75.75s-.34.75-.75.75-.75-.34-.75-.75.34-.75.75-.75zM19 19H5V5h14v14z"
                            />
                          </svg>
                          <p
                            class="MuiTypography-root MuiTypography-body2 emotion-22"
                            data-testid="NoData__message"
                          >
                            ra.message.noDataInformation
                          </p>
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 emotion-44"
        >
          <hr
            class="MuiDivider-root MuiDivider-fullWidth emotion-45"
          />
        </div>
      </div>
      <div
        class="MuiBox-root emotion-2"
        data-testid="RemarkFormSection__root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 emotion-47"
        >
          <div
            class="MuiGrid-root MuiGrid-item emotion-7"
          >
            <div
              class="MuiBox-root emotion-49"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 emotion-4"
                data-testid="RemarkFormSection__title"
              >
                Remarks
              </p>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-51"
          data-testid="RemarkFormSection__remark"
        >
          <div
            class="MuiGrid-root MuiGrid-container emotion-52"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth emotion-53"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root  emotion-54"
              >
                <label
                  class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary emotion-55"
                  data-shrink="false"
                  for="mui-1"
                  id="mui-1-label"
                >
                  Remark
                </label>
                <div
                  class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-multiline emotion-56"
                >
                  <textarea
                    aria-invalid="false"
                    class="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputMultiline MuiInputBase-inputSizeSmall emotion-57"
                    data-testid="RemarkFormSection__remarkInput"
                    id="mui-1"
                    maxlength="500"
                    name="remark"
                    rows="6.215"
                    style="height: 0px; overflow: hidden;"
                  />
                  <textarea
                    aria-hidden="true"
                    class="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputMultiline MuiInputBase-inputSizeSmall emotion-57"
                    readonly=""
                    style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding: 0px; width: 100%;"
                    tabindex="-1"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline emotion-59"
                  >
                    <legend
                      class="emotion-60"
                    >
                      <span>
                        Remark
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FormTimesheetInfo /> on EDIT mode should match snapshot 1`] = `
.emotion-2 {
  margin-top: 24px;
}

.emotion-2 .GeneralInfoSection-labelOneColumn {
  max-width: 12.5%;
}

.emotion-2 .GeneralInfoSection-valueOneColumn {
  max-width: 37.2%;
  white-space: pre-wrap;
}

.emotion-2 .GeneralInfoSection-breakWord {
  word-break: break-word;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: -24px;
  width: calc(100% + 24px);
  margin-left: -24px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
}

.emotion-3>.MuiGrid-item {
  padding-top: 24px;
}

.emotion-3>.MuiGrid-item {
  padding-left: 24px;
}

.emotion-4 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-5 {
  margin-bottom: 8px;
}

.emotion-6 {
  margin: 0;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.5;
  color: #212121;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding-top: 8px;
  padding-bottom: 8px;
}

.emotion-9 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-10 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  word-break: break-word;
}

.emotion-11 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-basis: 25%;
  -ms-flex-preferred-size: 25%;
  flex-basis: 25%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 25%;
}

@media (min-width:600px) {
  .emotion-11 {
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 25%;
  }
}

@media (min-width:960px) {
  .emotion-11 {
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 25%;
  }
}

@media (min-width:1440px) {
  .emotion-11 {
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 25%;
  }
}

@media (min-width:1920px) {
  .emotion-11 {
    -webkit-flex-basis: 25%;
    -ms-flex-preferred-size: 25%;
    flex-basis: 25%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 25%;
  }
}

.emotion-12 {
  margin: 0;
  font-size: 0.75rem;
  font-weight: 400;
  letter-spacing: 0.4px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.66;
  color: #757575;
}

.emotion-13 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-basis: 66.666667%;
  -ms-flex-preferred-size: 66.666667%;
  flex-basis: 66.666667%;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  max-width: 66.666667%;
}

@media (min-width:600px) {
  .emotion-13 {
    -webkit-flex-basis: 66.666667%;
    -ms-flex-preferred-size: 66.666667%;
    flex-basis: 66.666667%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 66.666667%;
  }
}

@media (min-width:960px) {
  .emotion-13 {
    -webkit-flex-basis: 66.666667%;
    -ms-flex-preferred-size: 66.666667%;
    flex-basis: 66.666667%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 66.666667%;
  }
}

@media (min-width:1440px) {
  .emotion-13 {
    -webkit-flex-basis: 66.666667%;
    -ms-flex-preferred-size: 66.666667%;
    flex-basis: 66.666667%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 66.666667%;
  }
}

@media (min-width:1920px) {
  .emotion-13 {
    -webkit-flex-basis: 66.666667%;
    -ms-flex-preferred-size: 66.666667%;
    flex-basis: 66.666667%;
    -webkit-box-flex: 0;
    -webkit-flex-grow: 0;
    -ms-flex-positive: 0;
    flex-grow: 0;
    max-width: 66.666667%;
  }
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-15 {
  margin: 0;
  font-size: 0.875rem;
  font-weight: 400;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.43;
}

.emotion-38 {
  margin-top: 16px;
  margin-bottom: 16px;
}

.emotion-39 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: #E0E0E0;
  border-bottom-width: thin;
  border-top: 1px dashed #E0E0E0;
  border-bottom: 0px solid;
  height: 0;
  background-color: transparent;
}

.emotion-40 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-top: 24px;
}

.emotion-45 {
  margin-top: 16px;
  padding-bottom: 16px;
}

.emotion-46 {
  position: relative;
  box-shadow: 0px 3px 3px -2px rgba(0, 0, 0, 0.2),0px 3px 4px rgba(0, 0, 0, 0.14),0px 1px 8px rgba(0, 0, 0, 0.12);
  border-radius: 4px;
  overflow: hidden;
}

.emotion-47 {
  background-color: #fff;
  color: #212121;
  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border-radius: 4px;
  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2),0px 2px 2px rgba(0, 0, 0, 0.14),0px 1px 5px rgba(0, 0, 0, 0.12);
  width: 100%;
  overflow-x: auto;
}

.emotion-48 {
  display: table;
  width: 100%;
  border-collapse: collapse;
  border-spacing: 0;
}

.emotion-48 caption {
  font-size: 0.875rem;
  font-weight: 400;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.43;
  padding: 16px;
  color: #757575;
  text-align: left;
  caption-side: bottom;
}

.emotion-49 {
  display: table-header-group;
}

.emotion-50 {
  color: inherit;
  display: table-row;
  vertical-align: middle;
  outline: 0;
}

.emotion-50.MuiTableRow-hover:hover {
  background-color: #F5F5F5;
}

.emotion-50.Mui-selected {
  background-color: rgba(33, 150, 243, 0.08);
}

.emotion-50.Mui-selected:hover {
  background-color: rgba(33, 150, 243, 0.12);
}

.emotion-51 {
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.5rem;
  display: table-cell;
  vertical-align: inherit;
  border-bottom: 1px solid rgba(251, 251, 251, 1);
  text-align: left;
  padding: 16px;
  color: #212121;
  position: relative;
}

.emotion-53 {
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.5rem;
  display: table-cell;
  vertical-align: inherit;
  border-bottom: 1px solid rgba(251, 251, 251, 1);
  text-align: left;
  padding: 16px;
  color: #212121;
  position: relative;
  border-right: 1px solid #E0E0E0;
  border-bottom: 1px solid #E0E0E0;
}

.emotion-54 {
  margin: 0;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.1px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.57;
}

.emotion-59 {
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.5rem;
  display: table-cell;
  vertical-align: inherit;
  border-bottom: 1px solid rgba(251, 251, 251, 1);
  text-align: left;
  padding: 16px;
  color: #212121;
  position: relative;
  border-right: none;
  border-bottom: 1px solid #E0E0E0;
}

.emotion-61 {
  display: table-row-group;
}

.emotion-63 {
  font-size: 0.875rem;
  font-weight: 400;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.43;
  display: table-cell;
  vertical-align: inherit;
  border-bottom: 1px solid rgba(251, 251, 251, 1);
  text-align: center;
  padding: 0;
  color: #212121;
}

.emotion-64 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  width: 100%;
  margin: auto;
  color: #757575;
  background-color: #FAFAFA;
  height: 80px;
  border: none;
}

.emotion-65 {
  position: absolute;
  width: 100%;
  left: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-66 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-67 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
  height: 24px;
  margin-right: 5px;
  color: #00000061;
}

.emotion-69 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  padding: 8px;
}

.emotion-72 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  margin-bottom: 16px;
}

.emotion-75 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: -16px;
  width: calc(100% + 16px);
  margin-left: -16px;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-75>.MuiGrid-item {
  padding-top: 16px;
}

.emotion-75>.MuiGrid-item {
  padding-left: 16px;
}

.emotion-77 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.4px;
  text-transform: capitalize;
  font-family: Roboto,sans-serif;
  line-height: 1.75;
  min-width: 64px;
  padding: 6px 8px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  color: #E0E0E0;
  border-radius: 4px;
  color: #212121;
  color: #F44336;
}

.emotion-77::-moz-focus-inner {
  border-style: none;
}

.emotion-77.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-77 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-77:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(224, 224, 224, 0.04);
}

@media (hover: none) {
  .emotion-77:hover {
    background-color: transparent;
  }
}

.emotion-77.Mui-disabled {
  color: #BDBDBD;
}

.emotion-77:hover {
  background-color: rgba(33, 33, 33, 0.04);
}

.emotion-78 {
  display: inherit;
  margin-right: 8px;
  margin-left: -4px;
}

.emotion-78>*:nth-of-type(1) {
  font-size: 20px;
}

.emotion-79 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  fill: currentColor;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  font-size: 1.5rem;
}

.emotion-81 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  font-size: 0.875rem;
  font-weight: 500;
  letter-spacing: 0.4px;
  text-transform: capitalize;
  font-family: Roboto,sans-serif;
  line-height: 1.75;
  min-width: 64px;
  padding: 5px 15px;
  border-radius: 4px;
  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  border: 1px solid rgba(33, 150, 243, 0.5);
  color: #2196F3;
  border-radius: 4px;
}

.emotion-81::-moz-focus-inner {
  border-style: none;
}

.emotion-81.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-81 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-81:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
  background-color: rgba(33, 150, 243, 0.04);
  border: 1px solid #2196F3;
}

@media (hover: none) {
  .emotion-81:hover {
    background-color: transparent;
  }
}

.emotion-81.Mui-disabled {
  color: #BDBDBD;
  border: 1px solid #E0E0E0;
}

.emotion-84 {
  overflow: hidden;
  pointer-events: none;
  position: absolute;
  z-index: 0;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: inherit;
}

.emotion-86 {
  width: 100%;
  overflow-x: auto;
}

.emotion-94 {
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-95 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  position: relative;
  box-sizing: border-box;
  -webkit-tap-highlight-color: transparent;
  background-color: transparent;
  outline: 0;
  border: 0;
  margin: 0;
  border-radius: 0;
  padding: 0;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  vertical-align: middle;
  -moz-appearance: none;
  -webkit-appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  color: inherit;
  padding: 9px;
  border-radius: 50%;
  color: #757575;
}

.emotion-95::-moz-focus-inner {
  border-style: none;
}

.emotion-95.Mui-disabled {
  pointer-events: none;
  cursor: default;
}

@media print {
  .emotion-95 {
    -webkit-print-color-adjust: exact;
    color-adjust: exact;
  }
}

.emotion-95:hover {
  background-color: rgba(33, 150, 243, 0.04);
}

@media (hover: none) {
  .emotion-95:hover {
    background-color: transparent;
  }
}

.emotion-95.Mui-checked,
.emotion-95.MuiCheckbox-indeterminate {
  color: #2196F3;
}

.emotion-95.Mui-disabled {
  color: #BDBDBD;
}

.emotion-95.MuiCheckbox-indeterminate {
  color: #757575;
}

.emotion-96 {
  cursor: inherit;
  position: absolute;
  opacity: 0;
  width: 100%;
  height: 100%;
  top: 0;
  left: 0;
  margin: 0;
  padding: 0;
  z-index: 1;
}

.emotion-113 {
  box-sizing: border-box;
  margin: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  margin-top: 16px;
  padding: 8px;
}

.emotion-120 {
  margin-top: 16px;
}

.emotion-122 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-width: 0;
  padding: 0;
  margin: 0;
  border: 0;
  vertical-align: top;
  width: 100%;
}

.emotion-123 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  position: relative;
  min-width: 0;
  padding: 0;
  margin: 0;
  border: 0;
  vertical-align: top;
  width: 100%;
}

.emotion-123 .TextFieldBase-readOnly .MuiInputBase-root {
  background-color: #FAFAFA;
}

.emotion-124 {
  color: #757575;
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.4375em;
  padding: 0;
  position: relative;
  display: block;
  transform-origin: top left;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  max-width: calc(100% - 24px);
  position: absolute;
  left: 0;
  top: 0;
  -webkit-transform: translate(14px, 9px) scale(1);
  -moz-transform: translate(14px, 9px) scale(1);
  -ms-transform: translate(14px, 9px) scale(1);
  transform: translate(14px, 9px) scale(1);
  -webkit-transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,-webkit-transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,max-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: color 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,transform 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms,max-width 200ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  z-index: 1;
  pointer-events: none;
}

.emotion-124.Mui-focused {
  color: #2196F3;
}

.emotion-124.Mui-disabled {
  color: #9E9E9E;
}

.emotion-124.Mui-error {
  color: #F44336;
}

.emotion-125 {
  font-size: 1rem;
  font-weight: 400;
  letter-spacing: 0.15px;
  text-transform: none;
  font-family: Roboto,sans-serif;
  line-height: 1.4375em;
  color: #212121;
  box-sizing: border-box;
  position: relative;
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 4px 0 5px;
  padding-top: 1px;
  width: 100%;
  line-height: 1.1876em;
  position: relative;
  border-radius: 4px;
  padding: 8.5px 14px;
}

.emotion-125.Mui-disabled {
  color: #9E9E9E;
  cursor: default;
}

.emotion-125:hover .MuiOutlinedInput-notchedOutline {
  border-color: #212121;
}

@media (hover: none) {
  .emotion-125:hover .MuiOutlinedInput-notchedOutline {
    border-color: rgba(0, 0, 0, 0.23);
  }
}

.emotion-125.Mui-focused .MuiOutlinedInput-notchedOutline {
  border-color: #2196F3;
  border-width: 2px;
}

.emotion-125.Mui-error .MuiOutlinedInput-notchedOutline {
  border-color: #F44336;
}

.emotion-125.Mui-disabled .MuiOutlinedInput-notchedOutline {
  border-color: #BDBDBD;
}

.emotion-126 {
  font: inherit;
  letter-spacing: inherit;
  color: currentColor;
  padding: 0;
  border: 0;
  box-sizing: content-box;
  background: none;
  height: auto;
  margin: 0;
  -webkit-tap-highlight-color: transparent;
  display: block;
  min-width: 0;
  width: 100%;
  -webkit-animation-name: mui-auto-fill-cancel;
  animation-name: mui-auto-fill-cancel;
  -webkit-animation-duration: 10ms;
  animation-duration: 10ms;
  padding-top: 0;
  resize: none;
  padding: 0;
}

.emotion-126::-webkit-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-126::-moz-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-126:-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-126::-ms-input-placeholder {
  color: currentColor;
  opacity: 0.42;
  -webkit-transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.emotion-126:focus {
  outline: 0;
}

.emotion-126:invalid {
  box-shadow: none;
}

.emotion-126::-webkit-search-decoration {
  -webkit-appearance: none;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-126::-webkit-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-126::-moz-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-126:-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-126::-ms-input-placeholder {
  opacity: 0!important;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-126:focus::-webkit-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-126:focus::-moz-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-126:focus:-ms-input-placeholder {
  opacity: 0.42;
}

label[data-shrink=false]+.MuiInputBase-formControl .emotion-126:focus::-ms-input-placeholder {
  opacity: 0.42;
}

.emotion-126.Mui-disabled {
  opacity: 1;
  -webkit-text-fill-color: #9E9E9E;
}

.emotion-126:-webkit-autofill {
  -webkit-animation-duration: 5000s;
  animation-duration: 5000s;
  -webkit-animation-name: mui-auto-fill;
  animation-name: mui-auto-fill;
}

.emotion-126:-webkit-autofill {
  border-radius: inherit;
}

.emotion-128 {
  text-align: left;
  position: absolute;
  bottom: 0;
  right: 0;
  top: -5px;
  left: 0;
  margin: 0;
  padding: 0 8px;
  pointer-events: none;
  border-radius: inherit;
  border-style: solid;
  border-width: 1px;
  overflow: hidden;
  min-width: 0%;
  border-color: rgba(0, 0, 0, 0.23);
}

.emotion-129 {
  float: unset;
  overflow: hidden;
  display: block;
  width: auto;
  padding: 0;
  height: 11px;
  font-size: 0.75em;
  visibility: hidden;
  max-width: 0.01px;
  -webkit-transition: max-width 50ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  transition: max-width 50ms cubic-bezier(0.0, 0, 0.2, 1) 0ms;
  white-space: nowrap;
}

.emotion-129>span {
  padding-left: 5px;
  padding-right: 5px;
  display: inline-block;
  opacity: 0;
  visibility: visible;
}

<div>
  <div
    class="MuiBox-root emotion-0"
    data-testid="FormTimesheetInfo__root"
  >
    <div
      class="MuiBox-root emotion-0"
      data-testid="FormTimesheetInfo__form"
    >
      <div
        class="MuiBox-root emotion-2"
        data-testid="GeneralInfoSection__root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 emotion-3"
        >
          <div
            class="MuiGrid-root MuiGrid-item emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 emotion-6"
                data-testid="GeneralInfoSection__title"
              >
                General Info
              </p>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-0"
          data-testid="GeneralInfoSection__generalInfo"
        >
          <div
            class="MuiBox-root emotion-8"
          >
            <div
              class="MuiGrid-root MuiGrid-container emotion-9"
              data-testid="GeneralInfoSection__generalInfoItem"
            >
              <div
                class="MuiGrid-root MuiGrid-container emotion-10"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 emotion-11"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption emotion-12"
                  >
                    Name
                  </span>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 emotion-13"
                  data-testid="GeneralInfoSection__generalStaffNameValue"
                >
                  <div
                    class="MuiBox-root emotion-14"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 emotion-15"
                    >
                      staff 0
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container emotion-9"
              data-testid="GeneralInfoSection__generalInfoItem"
            >
              <div
                class="MuiGrid-root MuiGrid-container emotion-10"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 emotion-11"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption emotion-12"
                  >
                    Email
                  </span>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 emotion-13"
                  data-testid="GeneralInfoSection__generalStaffEmailValue"
                >
                  <div
                    class="MuiBox-root emotion-14"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 emotion-15"
                    >
                      staff_0@gmail.com
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="MuiBox-root emotion-8"
          >
            <div
              class="MuiGrid-root MuiGrid-container emotion-9"
              data-testid="GeneralInfoSection__generalInfoItem"
            >
              <div
                class="MuiGrid-root MuiGrid-container emotion-10"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 emotion-11"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption emotion-12"
                  >
                    Date
                  </span>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 emotion-13"
                  data-testid="GeneralInfoSection__generalTimesheetDateValue"
                >
                  <div
                    class="MuiBox-root emotion-14"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 emotion-15"
                    >
                      2021/09/01
                    </p>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-container emotion-9"
              data-testid="GeneralInfoSection__generalInfoItem"
            >
              <div
                class="MuiGrid-root MuiGrid-container emotion-10"
              >
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-3 emotion-11"
                >
                  <span
                    class="MuiTypography-root MuiTypography-caption emotion-12"
                  >
                    Location
                  </span>
                </div>
                <div
                  class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-8 emotion-13"
                  data-testid="GeneralInfoSection__generalTimesheetLocationValue"
                >
                  <div
                    class="MuiBox-root emotion-14"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 emotion-15"
                    >
                      location name
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-38"
        >
          <hr
            class="MuiDivider-root MuiDivider-fullWidth emotion-39"
          />
        </div>
      </div>
      <div
        class="MuiBox-root emotion-40"
        data-testid="LessonHoursSection__root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 emotion-3"
        >
          <div
            class="MuiGrid-root MuiGrid-item emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 emotion-6"
                data-testid="LessonHoursSection__title"
              >
                Lesson Hours
              </p>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-45"
          data-testid="LessonHoursSection__lessonHours"
        >
          <div
            class="MuiBox-root emotion-46"
          >
            <div
              class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation2 MuiTableContainer-root emotion-47"
            >
              <table
                class="MuiTable-root emotion-48"
                data-testid="LessonHoursTable__table"
              >
                <thead
                  class="MuiTableHead-root emotion-49"
                  data-testid="TableBase__header"
                >
                  <tr
                    class="MuiTableRow-root MuiTableRow-head emotion-50"
                  >
                    <th
                      class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-51"
                      scope="col"
                      style="min-width: 60px; border-right: 1px solid #E0E0E0; border-bottom: 1px solid #E0E0E0; width: 60px;"
                    >
                      <p
                        class="MuiTypography-root MuiTypography-body2 emotion-15"
                        data-testid="TableIndexCell__index"
                      />
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-53"
                      scope="col"
                      style="width: 25%;"
                    >
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle2 emotion-54"
                        data-testid="TableBase__cellHeader"
                      >
                        Time Range
                      </h6>
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-53"
                      scope="col"
                      style="width: 25%;"
                    >
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle2 emotion-54"
                        data-testid="TableBase__cellHeader"
                      >
                        Status
                      </h6>
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-53"
                      scope="col"
                      style="width: 25%;"
                    >
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle2 emotion-54"
                        data-testid="TableBase__cellHeader"
                      >
                        Total Hours
                      </h6>
                    </th>
                    <th
                      class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-59"
                      scope="col"
                      style="width: 25%;"
                    >
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle2 emotion-54"
                        data-testid="TableBase__cellHeader"
                      >
                        Type
                      </h6>
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="MuiTableBody-root emotion-61"
                >
                  <tr
                    class="MuiTableRow-root emotion-50"
                  >
                    <td
                      class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium emotion-63"
                      colspan="12"
                      data-testid="TableBase__noDataMessage"
                    >
                      <div
                        class="MuiBox-root emotion-64"
                      >
                        <div
                          class="MuiBox-root emotion-65"
                        >
                          <div
                            class="MuiBox-root emotion-66"
                          >
                            <svg
                              aria-hidden="true"
                              class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-67"
                              data-testid="NoData__icon"
                              focusable="false"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M7 15h7v2H7zm0-4h10v2H7zm0-4h10v2H7zm12-4h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-.14 0-.27.01-.4.04-.39.08-.74.28-1.01.55-.18.18-.33.4-.43.64-.1.23-.16.49-.16.77v14c0 .27.06.54.16.78s.25.45.43.64c.27.27.62.47 1.01.55.13.02.26.03.4.03h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7-.25c.41 0 .75.34.75.75s-.34.75-.75.75-.75-.34-.75-.75.34-.75.75-.75zM19 19H5V5h14v14z"
                              />
                            </svg>
                            <p
                              class="MuiTypography-root MuiTypography-body2 emotion-15"
                              data-testid="NoData__message"
                            >
                              ra.message.noDataInformation
                            </p>
                          </div>
                        </div>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 emotion-69"
        >
          <hr
            class="MuiDivider-root MuiDivider-fullWidth emotion-39"
          />
        </div>
      </div>
      <div
        class="MuiBox-root emotion-40"
        data-testid="OtherWorkingHoursFormSection__root"
      >
        <div
          class="MuiGrid-root MuiGrid-container emotion-72"
        >
          <p
            class="MuiTypography-root MuiTypography-body1 emotion-6"
            data-testid="OtherWorkingHoursFormSection__title"
          >
            Other Working Hours
          </p>
          <div
            class="MuiBox-root emotion-0"
          >
            <div
              class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-2 emotion-75"
            >
              <div
                class="MuiGrid-root MuiGrid-item emotion-4"
              >
                <button
                  aria-label="ra.common.action.delete"
                  class="MuiButton-root MuiButton-text MuiButton-textDefault MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root Mui-disabled  emotion-77"
                  data-testid="OtherWorkingHoursFormSection__deleteAction"
                  disabled=""
                  style="word-break: keep-all;"
                  tabindex="-1"
                  type="button"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeMedium emotion-78"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-79"
                      data-testid="DeleteOutlinedIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M16 9v10H8V9h8m-1.5-6h-5l-1 1H5v2h14V4h-3.5l-1-1zM18 7H6v12c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7z"
                      />
                    </svg>
                  </span>
                  ra.common.action.delete
                </button>
              </div>
              <div
                class="MuiGrid-root MuiGrid-item emotion-4"
              >
                <button
                  aria-label="ra.common.action.create"
                  class="MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root  emotion-81"
                  data-testid="OtherWorkingHoursFormSection__addButton"
                  style="word-break: keep-all;"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiButton-startIcon MuiButton-iconSizeMedium emotion-78"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-79"
                      data-testid="AddIcon"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M19 13h-6v6h-2v-6H5v-2h6V5h2v6h6v2z"
                      />
                    </svg>
                  </span>
                  Add
                  <span
                    class="MuiTouchRipple-root emotion-84"
                  />
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-46"
        >
          <div
            class="MuiTableContainer-root emotion-86"
          >
            <table
              class="MuiTable-root emotion-48"
              data-testid="OtherWorkingHoursUpsertTable"
            >
              <thead
                class="MuiTableHead-root emotion-49"
                data-testid="TableBase__header"
              >
                <tr
                  class="MuiTableRow-root MuiTableRow-head emotion-50"
                >
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-51"
                    scope="col"
                    style="min-width: 5%; border-right: 1px solid #E0E0E0; border-bottom: 1px solid #E0E0E0; width: 5%;"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body2 emotion-15"
                      data-testid="TableIndexCell__index"
                    />
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-53"
                    scope="col"
                    style="width: 20%;"
                  >
                    <div
                      class="MuiBox-root emotion-66"
                    >
                      <div
                        class="MuiBox-root emotion-94"
                      >
                        <span
                          aria-disabled="true"
                          class="MuiCheckbox-root MuiCheckbox-colorPrimary MuiButtonBase-root Mui-disabled MuiCheckbox-root MuiCheckbox-colorPrimary PrivateSwitchBase-root Mui-disabled emotion-95"
                          data-testid="TableHeaderWithCheckbox__checkboxHeader"
                          style="padding: 0px; width: 18px; height: 18px;"
                          tabindex="-1"
                        >
                          <input
                            aria-label="ra.common.action.selectAllItems"
                            class="PrivateSwitchBase-input emotion-96"
                            data-indeterminate="false"
                            disabled=""
                            type="checkbox"
                          />
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-79"
                            data-testid="CheckBoxOutlineBlankIcon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                            />
                          </svg>
                        </span>
                      </div>
                      <h6
                        class="MuiTypography-root MuiTypography-subtitle2 emotion-54"
                        data-testid="TableHeaderWithCheckbox__cellHeader"
                      >
                        Working Type
                      </h6>
                    </div>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-53"
                    scope="col"
                    style="width: 30%;"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 emotion-54"
                      data-testid="TableHeaderWithCheckbox__cellHeader"
                    >
                      Time Range
                    </h6>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-53"
                    scope="col"
                    style="width: 10%;"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 emotion-54"
                      data-testid="TableHeaderWithCheckbox__cellHeader"
                    >
                      Total Hours
                    </h6>
                  </th>
                  <th
                    class="MuiTableCell-root MuiTableCell-head MuiTableCell-sizeMedium emotion-59"
                    scope="col"
                    style="width: 40%;"
                  >
                    <h6
                      class="MuiTypography-root MuiTypography-subtitle2 emotion-54"
                      data-testid="TableHeaderWithCheckbox__cellHeader"
                    >
                      Remarks
                    </h6>
                  </th>
                </tr>
              </thead>
              <tbody
                class="MuiTableBody-root emotion-61"
              >
                <tr
                  class="MuiTableRow-root emotion-50"
                >
                  <td
                    class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignCenter MuiTableCell-paddingNone MuiTableCell-sizeMedium emotion-63"
                    colspan="12"
                    data-testid="TableBase__noDataMessage"
                  >
                    <div
                      class="MuiBox-root emotion-64"
                    >
                      <div
                        class="MuiBox-root emotion-65"
                      >
                        <div
                          class="MuiBox-root emotion-66"
                        >
                          <svg
                            aria-hidden="true"
                            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium emotion-67"
                            data-testid="NoData__icon"
                            focusable="false"
                            viewBox="0 0 24 24"
                          >
                            <path
                              d="M7 15h7v2H7zm0-4h10v2H7zm0-4h10v2H7zm12-4h-4.18C14.4 1.84 13.3 1 12 1c-1.3 0-2.4.84-2.82 2H5c-.14 0-.27.01-.4.04-.39.08-.74.28-1.01.55-.18.18-.33.4-.43.64-.1.23-.16.49-.16.77v14c0 .27.06.54.16.78s.25.45.43.64c.27.27.62.47 1.01.55.13.02.26.03.4.03h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-7-.25c.41 0 .75.34.75.75s-.34.75-.75.75-.75-.34-.75-.75.34-.75.75-.75zM19 19H5V5h14v14z"
                            />
                          </svg>
                          <p
                            class="MuiTypography-root MuiTypography-body2 emotion-15"
                            data-testid="NoData__message"
                          >
                            ra.message.noDataInformation
                          </p>
                        </div>
                      </div>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-12 emotion-113"
        >
          <hr
            class="MuiDivider-root MuiDivider-fullWidth emotion-39"
          />
        </div>
      </div>
      <div
        class="MuiBox-root emotion-40"
        data-testid="RemarkFormSection__root"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-spacing-xs-3 emotion-3"
        >
          <div
            class="MuiGrid-root MuiGrid-item emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 emotion-6"
                data-testid="RemarkFormSection__title"
              >
                Remarks
              </p>
            </div>
          </div>
        </div>
        <div
          class="MuiBox-root emotion-120"
          data-testid="RemarkFormSection__remark"
        >
          <div
            class="MuiGrid-root MuiGrid-container emotion-9"
          >
            <div
              class="MuiFormControl-root MuiFormControl-fullWidth emotion-122"
            >
              <div
                class="MuiFormControl-root MuiFormControl-fullWidth MuiTextField-root  emotion-123"
              >
                <label
                  class="MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-sizeSmall MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary emotion-124"
                  data-shrink="false"
                  for="mui-3"
                  id="mui-3-label"
                >
                  Remark
                </label>
                <div
                  class="MuiOutlinedInput-root MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-fullWidth MuiInputBase-formControl MuiInputBase-sizeSmall MuiInputBase-multiline emotion-125"
                >
                  <textarea
                    aria-invalid="false"
                    class="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputMultiline MuiInputBase-inputSizeSmall emotion-126"
                    data-testid="RemarkFormSection__remarkInput"
                    id="mui-3"
                    maxlength="500"
                    name="remark"
                    rows="6.215"
                    style="height: 0px; overflow: hidden;"
                  />
                  <textarea
                    aria-hidden="true"
                    class="MuiOutlinedInput-input MuiInputBase-input MuiInputBase-inputMultiline MuiInputBase-inputSizeSmall emotion-126"
                    readonly=""
                    style="visibility: hidden; position: absolute; overflow: hidden; height: 0px; top: 0px; left: 0px; transform: translateZ(0); padding: 0px; width: 100%;"
                    tabindex="-1"
                  />
                  <fieldset
                    aria-hidden="true"
                    class="MuiOutlinedInput-notchedOutline emotion-128"
                  >
                    <legend
                      class="emotion-129"
                    >
                      <span>
                        Remark
                      </span>
                    </legend>
                  </fieldset>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
